--- a/Punya_Workspace.ipynb
+++ b/Punya_Workspace.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "848f0548",
+   "id": "4b8cc13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e293d205",
+   "id": "1a3de176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a566338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl.dump_session('var3.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e73dfb45",
+   "id": "364daf45",
    "metadata": {},
    "outputs": [],
    "source": []
