--- a/Workspace.ipynb
+++ b/Workspace.ipynb
@@ -2,33 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "8f7b5d91",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function dill.session.dump_session(filename='C:\\\\Users\\\\kumar\\\\AppData\\\\Local\\\\Temp\\\\session.pkl', main=None, byref=False, **kwds)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dill as dl\n",
     "var1 = \"Hello Data\"\n",
-    "var2 = \"Welcome to PFA Lab class\"\n",
+    "var2 = \" Welcome to PFA Lab class\"\n",
     "var3 = var1 + var2\n",
-    "dl.dump_session"
+    "#creating a pi\n",
+    "dl.dump_session('var3.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "20550aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Data Welcome to PFA Lab class\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(var3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "786a92fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#del var1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ff40cc37",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Data\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(var1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20550aba",
+   "id": "ecba641f",
    "metadata": {},
    "outputs": [],
    "source": []
